[gd_scene load_steps=11 format=2]

[ext_resource path="res://Characters/enemy/Event_trigger.gd" type="Script" id=1]
[ext_resource path="res://Moss_Baby_Walk-2.png" type="Texture" id=2]
[ext_resource path="res://Moss_Baby_Walk-3.png" type="Texture" id=3]
[ext_resource path="res://Moss_Baby_Walk-4.png" type="Texture" id=4]
[ext_resource path="res://Moss_Baby_Walk-5.png" type="Texture" id=5]
[ext_resource path="res://Characters/Player/Effects.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10.6451, 9.80361 )

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.429, 0.0 ]
}

[node name="Enemy" type="Area2D" groups=[
"Enemy",
]]
script = ExtResource( 1 )

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( -10.7785, -16.1529 )
scale = Vector2( 0.0837345, 0.101094 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color( 1, 0.890196, 0, 1 )
position = Vector2( -0.527283, -0.75 )
z_index = -1
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 2 )
position = Vector2( -8.77848, -15.1529 )
scale = Vector2( 0.0837345, 0.101094 )
frames = SubResource( 3 )
frame = 1
playing = true

[node name="Enemy_effects" type="AnimationPlayer" parent="."]
anims/Stagger = SubResource( 4 )
script = ExtResource( 6 )

[node name="DamageTimer" type="Timer" parent="."]

[node name="Damage" type="AudioStreamPlayer2D" parent="."]
pitch_scale = 0.81

[connection signal="timeout" from="DamageTimer" to="." method="_on_DamageTimer_timeout"]
